--- a/style.css
+++ b/style.css
@@ -26,9 +26,10 @@ h1 {
 }
 
 .uph1 {
-    font-size: 20px;
+    font-size: 18px;
     position: relative;
     top: 40px;
+    text-align: center;
 }
 
 .underh1 {
@@ -37,11 +38,15 @@ h1 {
     bottom: 40px;
 }
 
+.inputMail {
+    height: 50px;
+    width: 50%;
+}
 .sub {
     background-color: orange;
     color: white;
-    height: 30px;
-    width: 90px;
+    height: 55px;
+    width: 30%;
     position: relative;
     
 }
