--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
 }
 
 .btn { background: transparent;
-    color: aqua;
-    border: solid 5px aqua;
+    color: rgb(67, 169, 224);
+    border: solid 5px rgb(67, 169, 224);
 
 }
 
@@ -17,7 +17,7 @@ body {
     position: relative;
     top: 50px;
     left: 25%;
-    width: 60%;
+    width: 49%;
 }
 
 h1 {
@@ -36,17 +36,20 @@ h1 {
     font-size: 20px;
     position: relative;
     bottom: 40px;
+    text-align: justify;
 }
 
 .inputMail {
     height: 50px;
     width: 50%;
+    padding: 5px;
 }
 .sub {
     background-color: orange;
     color: white;
-    height: 55px;
+    height: 60px;
     width: 30%;
     position: relative;
+    font-size: 15px;
     
 }
